renamed businessId -> nationalIdentifier
