# src/PrhApi.Models.CodeGen/Model/SignatoryRightsWriteRequest.cs
@@ -35,19 +35,19 @@ namespace PrhApi.Models.CodeGen.Model
         /// <summary>
         /// Initializes a new instance of the <see cref="SignatoryRightsWriteRequest" /> class.
         /// </summary>
-        /// <param name="businessId">businessId.</param>
+        /// <param name="nationalIdentifier">nationalIdentifier.</param>
         /// <param name="data">data.</param>
-        public SignatoryRightsWriteRequest(string businessId = default(string), SignatoryRightsResponse data = default(SignatoryRightsResponse))
+        public SignatoryRightsWriteRequest(string nationalIdentifier = default(string), SignatoryRightsResponse data = default(SignatoryRightsResponse))
         {
-            this.BusinessId = businessId;
+            this.NationalIdentifier = nationalIdentifier;
             this.Data = data;
         }
 
         /// <summary>
-        /// Gets or Sets BusinessId
+        /// Gets or Sets NationalIdentifier
         /// </summary>
-        [DataMember(Name = "businessId", EmitDefaultValue = false)]
-        public string BusinessId { get; set; }
+        [DataMember(Name = "nationalIdentifier", EmitDefaultValue = false)]
+        public string NationalIdentifier { get; set; }
 
         /// <summary>
         /// Gets or Sets Data
@@ -63,7 +63,7 @@ namespace PrhApi.Models.CodeGen.Model
         {
             StringBuilder sb = new StringBuilder();
             sb.Append("class SignatoryRightsWriteRequest {\n");
-            sb.Append("  BusinessId: ").Append(BusinessId).Append("\n");
+            sb.Append("  NationalIdentifier: ").Append(NationalIdentifier).Append("\n");
             sb.Append("  Data: ").Append(Data).Append("\n");
             sb.Append("}\n");
             return sb.ToString();
@@ -101,9 +101,9 @@ namespace PrhApi.Models.CodeGen.Model
             }
             return 
                 (
-                    this.BusinessId == input.BusinessId ||
-                    (this.BusinessId != null &&
-                    this.BusinessId.Equals(input.BusinessId))
+                    this.NationalIdentifier == input.NationalIdentifier ||
+                    (this.NationalIdentifier != null &&
+                    this.NationalIdentifier.Equals(input.NationalIdentifier))
                 ) && 
                 (
                     this.Data == input.Data ||
@@ -121,9 +121,9 @@ namespace PrhApi.Models.CodeGen.Model
             unchecked // Overflow is fine, just wrap
             {
                 int hashCode = 41;
-                if (this.BusinessId != null)
+                if (this.NationalIdentifier != null)
                 {
-                    hashCode = (hashCode * 59) + this.BusinessId.GetHashCode();
+                    hashCode = (hashCode * 59) + this.NationalIdentifier.GetHashCode();
                 }
                 if (this.Data != null)
                 {
